--- a/Market_Segmentation.ipynb
+++ b/Market_Segmentation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Market Segmentation.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +19,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chennukiran/Market_Segmentation/blob/main/Market_Segmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "fcFauKnJFuD_"
       },
       "source": [
         "# **Market Segmentation**\n",
         "### **Task done as part of FeyNN Labs Internship**\n",
-        "Analysing the Electric Vehicle market in India using Segmentation analysis for an Electric Vehicles Startup and coming up with a  feasible strategy to enter the market, targeting the segments most likely to use Electric vehicles.\n",
-        "### **Authors:**\n",
-        "*   **Marisha Bhatti**\n",
-        "*   **Hari G**\n",
-        "*   **S. Siranjeevi**"
+        "Analysing the Electric Vehicle market in India using Segmentation analysis for an Electric Vehicles Startup and coming up with a  feasible strategy to enter the market, targeting the segments most likely to use Electric vehicles."
       ]
     },
     {
